--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,11 @@
 body {
-	background-color: greenyellow;
+	background-color: honeydew;
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .container {
 	margin: auto;
-	background-color: honeydew;
+	background-color: grey;
 	width: 80%;
 	padding: 1em;
 }
@@ -18,4 +18,12 @@ body {
 	text-align: center;
 	padding: 0.5em;
 	margin-bottom: 0.25em;
+}
+
+
+.reminder {
+	background-color: lightblue;
+	padding: 1em;
+	border-radius: 0.5em;
+	margin: 1em;
 }
