added styling and extra forms

--- a/public/style.css
+++ b/public/style.css
@@ -1,33 +1,53 @@
 body {
-	background-color: honeydew;
+	background-color: #3454D1;
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+
 .container {
-	margin: auto;
-	background-color: grey;
-	width: 80%;
+	background-color: #34D1BF;
 	padding: 1em;
+	width: 80%;
+	margin: auto;
+	border-radius: 0.5em;
 }
 
-
-.counter {
-	background-color: lightgray;
-	font-size: 2em;
-	width: 3em;
-	text-align: center;
-	padding: 0.5em;
-	margin-bottom: 0.25em;
-}
-
-
-.reminder {
-	background-color: lightblue;
+.section {
+	background-color: #F7DD72;
 	padding: 1em;
 	border-radius: 0.5em;
-	margin: 1em;
+	/* margin: 1em; */
 }
 
 .late {
-	color: crimson;
+	color: #D1345B;
+}
+
+input[type="text"] {
+	border-radius : 0.25em;
+	margin: 1em;
+	padding: 1em;
+}
+
+label {
+	width: 8em;
+	padding : 1em;
+	margin: 0em;
+	display: inline-block;
+}
+
+.bigger-button {
+	padding: 1em;
+	margin: 1em;
+	font-weight: bold;
+}
+
+.small-button {
+	padding: 0.25em;
+	margin: 0.25em;
+	font-weight:100;
+}
+
+.mt-1 {
+	margin-top: 1em;
 }
