--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
 <body>
 	<div class="container" >
 		{{!-- <div>Nav bar here...</div> --}}
+		<h1>Reminders app</h1>
 		{{{body}}}
 	</div>
 </body>
